tests/ui/consts/control-flow/issue-46843.stderr
error[E0015]: cannot call non-const function `non_const` in constants
  --> $DIR/issue-46843.rs:10:26
   |
LL | pub const Q: i32 = match non_const() {
   |                          ^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/issue-46843.rs:6:1
   |
LL | fn non_const() -> Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
